<resources>
    <string name="app_name">elBarman</string>
    <string name="login_title">Login</string>
    <string name="login_enter_number">Please enter your mobile number</string>
    <string name="login_number_hint">Phone Number *</string>
    <string name="login_enter_otp">Please enter the OTP</string>
    <string name="login_otp_hint">XXXXXX *</string>
    <string name="login_otp_desc">Your mobile number will be auto-verified. Please enter the received 6 digit OTP if it is not auto-detected and auto-verified.</string>
    <string name="login_otp_send_fail">Couldn\'t send OTP for verification. Please try again later.</string>
    <string name="login_fail">Couldn\'t log you in. Please try again later.</string>
    <string name="signup_title">Account Details</string>
    <string name="signup_first_name_hint">First Name *</string>
    <string name="signup_last_name_hint">Last Name *</string>
    <string name="signup_save_failed">Failed to save your details. You can update them again from your profile.</string>
    <string name="signup_desc">One last step to go \u2665</string>
    <string name="signup_do_it_later">Do it later</string>
    <string name="payment_card_holder_name">Name on card *</string>
    <string name="payment_card_number">Card number *</string>
    <string name="payment_expiry_date">Expiry (MM/YY) *</string>
    <string name="payment_cvv">CVV *</string>
    <string name="payment_upi">UPI Payments</string>
    <string name="payment_online">Online Payments</string>
    <string name="nav_drawer_favourites">Favourites</string>
    <string name="nav_drawer_history">History</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_header_title">Hello,</string>
    <string name="all_boarding">SIGN IN / SIGN UP</string>
    <string name="all_digits">0123456789</string>
    <string name="all_alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="all_country_code">+91</string>
    <string name="all_rupee_symbol">\u20B9</string>
    <string name="all_resend">Resend</string>
    <string name="all_verify">Verify</string>
    <string name="all_get_started">Get Started</string>
    <string name="all_get_drink">Get</string>
    <string name="all_unexpected_crash">OOPS! I crashed! Don\'t worry the developers have been notified</string>
    <string name="all_home">Home</string>
    <string name="all_ok">OK</string>
    <string name="all_okay">Okay</string>
    <string name="all_continue">Continue</string>
    <string name="all_generic_err">OOPS! Something went wrong, please try again later</string>
    <string name="all_drink_success">Your drink is prepared\n Please collect your drink</string>
    <string name="all_cannot_make_drink">Sorry, unable to make your drink. Please try again later</string>
    <string name="all_cards_payment">Credit, Debit &amp; ATM Cards</string>
    <string name="all_next">NEXT</string>
    <string name="all_retry">Retry</string>
    <string name="all_phone_pe_install">You don\'t have PhonePe installed\n Please install the app to continue</string>
    <string name="all_google_pay_install">You don\'t have Google Pay installed\n Please install the app to continue</string>
    <string name="bottom_navigation_title_menu">Menu</string>
    <string name="bottom_navigation_title_profile">Profile</string>
    <string name="menu_price">\u20B9%s</string>
    <string name="menu_error">There was an error getting the menu. Please try again</string>
    <string name="drink_details_error">Sorry, couldn\'t get the drink details. Please try again</string>
    <string name="drink_details_ingredients">Ingredients</string>
    <string name="payment_title">Payment</string>
    <string name="payment_drink">Drink:</string>
    <string name="payment_total">Total:</string>
    <string name="payment_gpay">Google Pay</string>
    <string name="payment_phone_pe">PhonePe</string>
    <string name="payment_desc">Please complete your payment &#127865;</string>
    <string name="payment_fail">The payment could not be completed. Please try again.</string>
    <string name="content_desc_sign_in">Sign in</string>
    <string name="content_desc_sign_up">Sign up</string>
    <string name="content_desc_back_button">Go back</string>
    <string name="content_desc_menu">Bar menu</string>
    <string name="content_desc_profile">Your profile</string>
    <string name="content_desc_rupee">Rupee</string>
    <string name="content_desc_gpay">Google Pay payment</string>
    <string name="content_desc_phone_pe">Phone Pe payment</string>
    <string name="content_desc_right_arrow">Right arrow</string>
    <string name="content_desc_error">Error</string>
</resources>
