<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_nav_drawer_favourite"
                android:title="@string/nav_drawer_favourites" />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_nav_drawer_history"
                android:title="@string/nav_drawer_history" />
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_nav_drawer_logout"
                android:title="@string/nav_drawer_logout" />
    </group>
</menu>
