<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/paymentCardNameEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="@string/all_alphabets"
                android:hint="@string/payment_card_holder_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/all_font_20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_number_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_name_til">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/paymentCardNumEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="@string/all_digits"
                android:inputType="number"
                android:maxLength="16"
                android:hint="@string/payment_card_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/all_font_20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiry_date_til"
            android:layout_width="@dimen/all_width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/all_margin_1dp"
            android:layout_marginTop="@dimen/all_margin_16dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintRight_toLeftOf="@+id/cvv_til"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_number_til"
            >

        <androidx.appcompat.widget.AppCompatEditText
                android:digits="@string/all_digits"
                android:id="@+id/paymentExpiryDateEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_expiry_date"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cvv_til"
            android:layout_width="@dimen/all_width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_16dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/expiry_date_til"
            app:layout_constraintTop_toBottomOf="@+id/card_number_til"
            >

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/paymentCvvEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_cvv"
                android:digits="@string/all_digits"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/paymentNextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_margin_16dp"
            android:layout_marginBottom="@dimen/all_margin_16dp"
            android:background="@color/disabledColor"
            android:text="@string/all_next"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/all_font_22sp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvv_til" />


</androidx.constraintlayout.widget.ConstraintLayout>