<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signup_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".presentation.onboarding.signup.SignUpFragment">

    <androidx.cardview.widget.CardView
            android:id="@+id/signup_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signup_inner_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/all_margin_16dp"
                android:background="@color/colorWhite">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="@dimen/all_height_200dp"
                    android:layout_height="@dimen/all_height_200dp"
                    android:layout_marginTop="@dimen/all_margin_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profile" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupFnTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/all_margin_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/signupFirstNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:drawablePadding="@dimen/all_padding_10dp"
                        android:fontFamily="@font/baskerville_regular"
                        android:hint="@string/signup_first_name_hint"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/all_font_20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sinupLnTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/all_margin_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupFnTil">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/signupLastNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:drawablePadding="@dimen/all_padding_10dp"
                        android:fontFamily="@font/baskerville_regular"
                        android:hint="@string/signup_last_name_hint"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/all_font_20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/all_margin_24dp"
                    android:layout_marginBottom="@dimen/all_margin_24dp"
                    android:background="@color/disabledColor"
                    android:enabled="false"
                    android:fontFamily="@font/baskerville_bold"
                    android:text="@string/all_get_started"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/all_font_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sinupLnTil" />

            <ProgressBar
                    android:id="@+id/signupProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>